--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,7 @@ description: Please see the README on GitHub at <https://github.com/NielsOuvrard
 
 dependencies:
   - base >= 4.7 && < 5
+  - fgl
 
 ghc-options:
   - -Wall
@@ -46,6 +47,7 @@ executables:
       - -with-rtsopts=-N
     dependencies:
       - haskell-dijkstra
+      - fgl
 
 tests:
   haskell-dijkstra-test:
@@ -57,3 +59,4 @@ tests:
       - -with-rtsopts=-N
     dependencies:
       - haskell-dijkstra
+      - fgl
