--- a/stack.yaml
+++ b/stack.yaml
@@ -30,7 +30,7 @@ snapshot:
 #   - auto-update
 #   - wai
 packages:
-- .
+  - .
 # Dependency packages to be pulled from upstream that are not in the snapshot.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
@@ -40,16 +40,16 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
-
+extra-deps:
+  - fgl-5.8.3.0
 # Override default flag values for project packages and extra-deps
-# flags: {}
+flags: {}
 
 # Extra package databases containing global packages
-# extra-package-dbs: []
+extra-package-dbs: []
 
 # Control whether we use the GHC we find on the path
-# system-ghc: true
+system-ghc: true
 #
 # Require a specific version of Stack, using version ranges
 # require-stack-version: -any # Default
